# svitla_ml_take_home

./: README.md  ocr_predictions_nn.ipynb  pyproject.toml
