[tool.poetry]
name = "handwriting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.2"
transformers = "^4.47.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
pandas = "^2.2.3"
easyocr = "^1.7.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
